package com.dario.agenttrader.marketStrategies;

public class MarketManager {
}
