@startuml
class MarketStrategySystem
MarketStrategySystem --> marketStrategyManager : A link
note on link #red: note that is red

class marketStrategyManager
class marketManager
marketStrategyManager --> marketManager
class TrackerStrategy
marketManager --> TrackerStrategy
class marketStrategyOpenOnLow
marketManager --> marketStrategyOpenOnLow

class positionManager
marketStrategyManager --> positionManager
class position
positionManager --> position
@enduml